[gd_scene load_steps=5 format=3 uid="uid://b8x4q6mkkxn8w"]

[ext_resource type="Script" uid="uid://wboetfgky3a3" path="res://addons/nefn/scenes/player/nefn_player.gd" id="1_r3j4p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8j2q"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k7p4x"]
radius = 0.4
height = 1.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2y8vx"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:velocity")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:current_state")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="NEFNPlayer" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_r3j4p")

[node name="StandingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_u8j2q")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_k7p4x")
disabled = true
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
current = true

[node name="NetworkSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_2y8vx")

[node name="InputSynchronizer" type="Node" parent="."]

[node name="StateSynchronizer" type="Node" parent="."]

[node name="RayCasts" type="Node3D" parent="."]

[node name="WallDetectorFront" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
target_position = Vector3(0, 0, -1)

[node name="WallDetectorLeft" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 0, 0.9, 0)
target_position = Vector3(0, 0, -1)

[node name="WallDetectorRight" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0, 0.9, 0)
target_position = Vector3(0, 0, -1)

[node name="Floor" type="Node3D" parent="."]

[node name="FloorDetectorFront" type="RayCast3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -0.3)
target_position = Vector3(0, -0.3, 0)

[node name="FloorDetectorLeft" type="RayCast3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.1, 0)
target_position = Vector3(0, -0.3, 0)

[node name="FloorDetectorRight" type="RayCast3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.1, 0)
target_position = Vector3(0, -0.3, 0)

[connection signal="synchronized" from="NetworkSynchronizer" to="." method="_on_network_state_updated"]
